# Vera

./: Cargo.toml
crates/vera-cli/: Cargo.toml
crates/vera-cli/src/: main.rs
crates/vera-cli/src/commands/: mod.rs  serve.rs
crates/vera-core/: Cargo.toml
crates/vera-core/src/: types.rs
crates/vera-core/src/embedding/: dynamic.rs  local_provider.rs  provider.rs
crates/vera-core/src/retrieval/: dynamic_reranker.rs  local_reranker.rs  reranker.rs
crates/vera-serve/: Cargo.toml
crates/vera-serve/src/: handlers.rs  lib.rs  types.rs
